--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ button, input[type='submit']{
 	cursor: pointer;
 }
 
+input:focus, textarea:focus{
+	outline: none;
+}
+
 a{
 	text-decoration: none;
 }
